Fix low contrast in mobile nav buttons #57

--- a/src/theme/stylus/themes/base.styl
+++ b/src/theme/stylus/themes/base.styl
@@ -35,6 +35,10 @@
         color: $icons-hover
     }
 
+    .mobile-nav-chapters i:hover {
+        color: $sidebar-fg
+    }
+
     .mobile-nav-chapters {
         background-color: $sidebar-bg
     }
